--- a/upload.html
+++ b/upload.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>File Upload</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form action ="http:/localhost:3000/api/file" method="post" enctype="multipart/form-data">
-    <input type="file" value="myfile" id="myfile" multiple>
-    <input type="submit" value="upload">
-
+  <div class="container">
+    <h1>File Upload</h1>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+      <div class="form-group">
+        <label for="fileInput">Select file:</label>
+        <input type="file" id="fileInput" name="fileInput" accept=".jpg, .jpeg, .png, .pdf" required>
+      </div>
+      <button type="submit">Upload</button>
     </form>
     <img src="http://localhost:3000/api/get-file/img/beauty.jpg">
+  </div>
 </body>
 </html>
