--- a/upload.html
+++ b/upload.html
@@ -1,21 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>File Upload</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <div class="container">
-    <h1>File Upload</h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-      <div class="form-group">
-        <label for="fileInput">Select file:</label>
-        <input type="file" id="fileInput" name="fileInput" accept=".jpg, .jpeg, .png, .pdf" required>
-      </div>
-      <button type="submit">Upload</button>
+    <form onsubmit="submitHandler(event)">
+        <input type="text" name="title" id="title" placeholder="title"><br>
+        <input type="file" name="profile" id="profile"><br><br>
+        <input type="submit" value="upload">
     </form>
-    <img src="http://localhost:3000/api/get-file/img/beauty.jpg">
-  </div>
+    <script>
+        function submitHandler(event) {
+            event.preventDefault();
+            let file = event.target[1].files[0];
+            let username = event.target[0].value;
+            convert(file)
+            .then(base64file=>{
+                console.log(base64file);
+                fetch(`http://localhost:3000/api/upload`,{
+                    method:"post",
+                    headers:{
+                        "Content-Type":"application/json"
+                    },
+                    body:JSON.stringify({
+                        title:title,
+                        profile:base64file
+                    })
+                })
+                .then(res=>res.text())
+                .then(data=>{
+                    alert(data)
+                })
+            })
+            .catch(error=>{
+                console.log(error);
+            })
+            
+        }
+        function convert(file){
+            return new Promise((res,rej)=>{
+                let fileReader = new FileReader();
+                fileReader.readAsDataURL(file);
+                fileReader.onload=() =>{
+                    res(fileReader.result)
+                }
+                fileReader.onerror = (error) =>{
+                    rej(error);
+                }
+            })
+        }
+    </script>
 </body>
 </html>
